--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -59,7 +59,8 @@ opacity-rule = [
   "100:class_g = 'Xreader'",
   "100:class_g = 'i3lock'",
   "100:class_g = 'Rofi'",
-  "100:class_g = 'org.vinegarhq.Sober'"
+  "100:class_g = 'org.vinegarhq.Sober'",
+  "100:class_g = 'Zathura'"
 ];
 
 shadow-exclude = [
