--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -23,6 +23,21 @@ fade-delta = 7;
 fade-in-step = 0.03;
 fade-out-step = 0.14;
 
+# Animations
+animations = (
+  {
+    triggers = [ "close", "hide" ];
+    preset = "disappear";
+    duration = "0.4";
+  },
+  {
+    triggers = [ "open", "show" ];
+    preset = "appear";
+    duration = "0.4";
+    scale = "0.1";
+  }
+)
+
 # Blur
 blur-method = "dual_kawase";
 blur-strength = 8;
