--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -28,6 +28,7 @@ animations = (
   {
     triggers = [ "close", "hide" ];
     preset = "disappear";
+    scale = "0.1";
     duration = "0.4";
   },
   {
