added cava to polybar

--- a/polybar/.config/polybar/main.ini
+++ b/polybar/.config/polybar/main.ini
@@ -29,7 +29,7 @@ cursor-scroll = ns-resize
 
 enable-ipc = true
 
-modules-left = time now-playing i3 
+modules-left = time cava now-playing i3 
 modules-right = wifi backlight battery date
 modules-center = memory
 
@@ -41,7 +41,7 @@ exec = $HOME/.config/polybar/scripts/cava.sh
 format = <label>
 format-font = 5
 label = %output%
-label-foreground = ${colors.color5}
+label-foreground = ${colors.color2}
 label-background = ${colors.background}
 
 
