--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -76,7 +76,8 @@ opacity-rule = [
   "100:class_g = 'i3lock'",
   "100:class_g = 'Rofi'",
   "100:class_g = 'org.vinegarhq.Sober'",
-  "100:class_g = 'Zathura'"
+  "100:class_g = 'Zathura'",
+  "100:class_g = 'fr.handbrake.ghb'"
 ];
 
 shadow-exclude = [
