--- a/polybar/.config/polybar/main.ini
+++ b/polybar/.config/polybar/main.ini
@@ -29,7 +29,7 @@ cursor-scroll = ns-resize
 
 enable-ipc = true
 
-modules-left = time cava now-playing i3 
+modules-left = time now-playing i3 
 modules-right = wifi backlight battery date
 modules-center = memory
 
