--- a/polybar/.config/polybar/main.ini
+++ b/polybar/.config/polybar/main.ini
@@ -29,8 +29,8 @@ cursor-scroll = ns-resize
 
 enable-ipc = true
 
-modules-left = time now-playing i3 
-modules-right = wifi backlight battery date
+modules-left = time bluetooth now-playing i3 
+modules-right = wifi backlight battery volume date
 modules-center = memory
 
 
@@ -195,3 +195,25 @@ format-prefix = "󰍛 "
 format-prefix-foreground = ${colors.color4}
 label-foreground = ${colors.color4}
 label = %used:2% 
+
+[module/volume]
+type = internal/pulseaudio
+format-volume = <ramp-volume> <label-volume>
+label-volume-foreground = ${colors.color2}
+
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
+
+format-muted = <label-muted>
+label-muted = 
+click-left = pavucontrol
+scroll-up = pactl set-sink-volume @DEFAULT_SINK@ +5%
+scroll-down = pactl set-sink-volume @DEFAULT_SINK@ -5%
+
+[module/bluetooth]
+type = custom/script
+exec = bluetoothctl show | grep -q "Powered: yes" && (bluetoothctl info | grep -q 'Connected: yes' && echo "󰂱" || echo "󰂯") || echo "󰂲"
+interval = 5
+click-left = blueman-manager
+label-foreground = ${colors.color2}
