--- a/polybar/.config/polybar/main.ini
+++ b/polybar/.config/polybar/main.ini
@@ -19,7 +19,7 @@ padding-right = 0
 
 module-margin = 0
 
-separator = " | "
+separator = "  "
 separator-foreground = ${colors.foreground-alt}
 
 font-0 = JetBrainsMono Nerd Font:size=12;
