--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -77,7 +77,9 @@ opacity-rule = [
   "100:class_g = 'Rofi'",
   "100:class_g = 'org.vinegarhq.Sober'",
   "100:class_g = 'Zathura'",
-  "100:class_g = 'fr.handbrake.ghb'"
+  "100:class_g = 'fr.handbrake.ghb'",
+  "100:class_g = 'Audacity'",
+  "100:class_g = 'lmms.bin'"
 ];
 
 shadow-exclude = [
@@ -85,7 +87,7 @@ shadow-exclude = [
   "class_g = 'zen-alpha'",
   "class_g = 'Xfce4-panel'",
   "class_g = 'Xfce4-screenshooter'",
-  "class_g = 'Polybar'"
+  "class_g = 'Polybar'",
 ];
 
 # Disable opacity for borders
