--- a/polybar/.config/polybar/main.ini
+++ b/polybar/.config/polybar/main.ini
@@ -199,7 +199,7 @@ label = %used:2%
 [module/volume]
 type = internal/pulseaudio
 format-volume = <ramp-volume> <label-volume>
-label-volume-foreground = ${colors.color2}
+ramp-volume-foreground = ${colors.color2}
 
 ramp-volume-0 = 
 ramp-volume-1 = 
