bunch of new wallpapers

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -79,7 +79,8 @@ opacity-rule = [
   "100:class_g = 'Zathura'",
   "100:class_g = 'fr.handbrake.ghb'",
   "100:class_g = 'Audacity'",
-  "100:class_g = 'lmms.bin'"
+  "100:class_g = 'lmms.bin'",
+  "100:class_g = 'lmms.exe'",
 ];
 
 shadow-exclude = [
