--- a/spicetify/.config/spicetify/config-xpui.ini
+++ b/spicetify/.config/spicetify/config-xpui.ini
@@ -20,7 +20,7 @@ remove_rtl_rule    = 1
 expose_apis        = 1
 
 [AdditionalOptions]
-extensions            = 
+extensions            = power-bar.js
 custom_apps           = marketplace|stats
 sidebar_config        = 0
 home_config           = 1
