--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -81,6 +81,7 @@ opacity-rule = [
   "100:class_g = 'Audacity'",
   "100:class_g = 'lmms.bin'",
   "100:class_g = 'lmms.exe'",
+  "100:class_g = 'Anki'",
 ];
 
 shadow-exclude = [
