--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -82,6 +82,7 @@ opacity-rule = [
   "100:class_g = 'lmms.bin'",
   "100:class_g = 'lmms.exe'",
   "100:class_g = 'Anki'",
+  "95:class_g = 'Todoist'",
 ];
 
 shadow-exclude = [
