--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -83,6 +83,7 @@ opacity-rule = [
   "100:class_g = 'lmms.exe'",
   "100:class_g = 'Anki'",
   "95:class_g = 'Todoist'",
+  "100:class_g = 'Gimp-2.10'",
 ];
 
 shadow-exclude = [
